kuberesources/ingressWebAADAuth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://mykubeapp.azure.tomaskubica.cz/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://mykubeapp.azure.tomaskubica.cz/oauth2/start?rd=$request_uri"
  name: myweb-ingress
spec: 
  rules:
    - host: mykubeapp.azure.tomaskubica.cz
      http:
        paths:
          - path: /
            backend:
              serviceName: myweb-service
              servicePort: 80
  tls:
      - hosts:
        - mykubeapp.azure.tomaskubica.cz
        secretName: tls-secret
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: oauth2-ingress
spec:
  rules:
    - host: mykubeapp.azure.tomaskubica.cz
      http:
        paths:
          - path: /oauth2
            backend:
              serviceName: oauth2-proxy
              servicePort: 4180
  tls:
      - hosts:
        - mykubeapp.azure.tomaskubica.cz
        secretName: tls-secret
